# semantic-histogram-based-global-localization

./: CMakeLists.txt  README.md  dryrun.md
include/: neighborhood.hpp
scripts/: fix_rotations.py
src/: main.cpp  main_airsim_xview.cpp  matcher.cpp  neighborhood.cpp  pointCloudMapping.cpp  registration.cpp  toolfile.cpp
